--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "compile": "hardhat compile",
+    "node": "hardhat node",
+    "clean": "hardhat clean",
+    "test": "hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.js --network localhost"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
