--- a/backend/package.json
+++ b/backend/package.json
@@ -26,5 +26,8 @@
     "hardhat-gas-reporter": "^2.2.1",
     "solidity-coverage": "^0.8.13",
     "typechain": "^8.3.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2"
   }
 }
