--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "h:node": "hardhat node",
     "clean": "hardhat clean",
     "test": "hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js --network localhost"
+    "deploy": "npx hardhat run scripts/deploy.js --network localhost",
+    "deploy:sepolia": "npx hardhat run scripts/deploy.js --network sepolia",
+    "verify": "npx hardhat verify --network sepolia 0xe9D99Ed4A2d9EaF675bB362128C21a463eC9acDE 100"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
@@ -28,6 +30,7 @@
     "typechain": "^8.3.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
