--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "h:node": "hardhat node",
     "clean": "hardhat clean",
     "test": "hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js --network localhost",
+    "deploy": "npx hardhat run scripts/deploy.js --network hardhat",
     "deploy:sepolia": "npx hardhat run scripts/deploy.js --network sepolia",
     "verify": "npx hardhat verify --network sepolia 0xe9D99Ed4A2d9EaF675bB362128C21a463eC9acDE 100"
   },
