vercel fix build

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,11 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "test:e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
